--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "angular": "~1.3.14",
     "angular-ui-router": "~0.2.13",
-    "normalize.css": "~3.0.2"
+    "normalize.css": "~3.0.2",
+    "ionicons": "~2.0.1"
   }
 }
