--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "angular": "~1.3.14",
     "angular-ui-router": "~0.2.13",
     "normalize.css": "~3.0.2",
-    "ionicons": "~2.0.1"
+    "ionicons": "~2.0.1",
+    "lodash": "~3.3.1",
+    "validator-js": "~3.33.0"
   }
 }
