--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "ionicons": "~2.0.1",
     "lodash": "~3.3.1",
     "validator-js": "~3.33.0",
-    "moment": "~2.9.0"
+    "moment": "~2.9.0",
+    "ngDialog": "~0.3.12"
   }
 }
