--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "aws-sdk": "^2.1.17",
     "bcryptjs": "^2.1.0",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
@@ -22,6 +23,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "node-uuid": "^1.4.3",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-github": "^0.1.5",
