--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "aws-sdk": "^2.1.17",
     "bcryptjs": "^2.1.0",
     "ejs": "~0.8.4",
+    "github": "^0.2.3",
     "grunt": "0.4.2",
     "grunt-bower": "^0.17.0",
     "grunt-contrib-clean": "~0.5.0",
