--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "aws-sdk": "^2.1.17",
     "bcryptjs": "^2.1.0",
     "ejs": "~0.8.4",
+    "fs-extra": "^0.16.5",
     "github": "^0.2.3",
     "grunt": "0.4.2",
     "grunt-bower": "^0.17.0",
@@ -24,6 +25,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "mime": "^1.3.4",
     "node-uuid": "^1.4.3",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
@@ -32,8 +34,11 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
     "rc": "~0.5.0",
+    "recursive-readdir": "^1.2.1",
+    "request": "^2.53.0",
     "sails": "~0.11.0",
     "sails-postgresql": "^0.10.14",
+    "unzip": "^0.1.11",
     "validator": "^3.33.0"
   },
   "scripts": {
