--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "async": "^0.9.0",
     "aws-sdk": "^2.1.17",
     "bcryptjs": "^2.1.0",
     "ejs": "~0.8.4",
@@ -25,6 +26,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "kue": "^0.8.11",
     "mime": "^1.3.4",
     "node-uuid": "^1.4.3",
     "passport": "^0.2.1",
