--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "lodash": "~3.3.1",
     "validator-js": "~3.33.0",
     "moment": "~2.9.0",
-    "ngDialog": "~0.3.12"
+    "ngDialog": "~0.3.12",
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5"
   }
 }
