--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "validator-js": "~3.33.0",
     "moment": "~2.9.0",
     "ngDialog": "~0.3.12",
-    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5"
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5",
+    "async": "~0.9.2"
   }
 }
