--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "kue": "^0.8.11",
+    "lodash": "^3.5.0",
     "mime": "^1.3.4",
     "node-uuid": "^1.4.3",
     "passport": "^0.2.1",
