--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "async": "^0.9.0",
     "aws-sdk": "^2.1.17",
     "bcryptjs": "^2.1.0",
+    "connect-redis": "^2.2.0",
     "ejs": "~0.8.4",
     "fs-extra": "^0.16.5",
     "github": "^0.2.3",
