--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "passport-google-oauth": "^0.1.5",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
+    "pg": "^4.3.0",
+    "pg-hstore": "^2.3.2",
     "rc": "~0.5.0",
     "recursive-readdir": "^1.2.1",
     "request": "^2.53.0",
     "sails": "~0.11.0",
     "sails-postgresql": "^0.10.14",
+    "sequelize": "^2.1.3",
     "unzip": "^0.1.11",
     "validator": "^3.33.0"
   },
