--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "adm-zip": "^0.4.7",
     "async": "^0.9.0",
     "aws-sdk": "^2.1.17",
     "bcryptjs": "^2.1.0",
