--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "adm-zip": "^0.4.7",
     "async": "^0.9.0",
     "aws-sdk": "^2.1.17",
     "bcryptjs": "^2.1.0",
@@ -32,6 +31,7 @@
     "lodash": "^3.5.0",
     "mime": "^1.3.4",
     "node-uuid": "^1.4.3",
+    "nodegit": "^0.4.0",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-github": "^0.1.5",
