--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "moment": "~2.9.0",
     "ngDialog": "~0.3.12",
     "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5",
-    "async": "~0.9.2"
+    "async": "~0.9.2",
+    "normalize-scss": "~3.0.3"
   }
 }
